--- a/report/hw_design.tex
+++ b/report/hw_design.tex
@@ -78,7 +78,7 @@ First revision included the main functionality and test points on basically ever
 \end{figure}
 
 \subsubsection{Second revision}
-The second revision fixed all known problems, followed the space requirements and added a lot of customization. The option to toggle power source and what sensors were currently powered was added. This way the effect from individual modules could be measured. Also since it was still unclear if a combined chip for all \gls{imu}s would be added or not, space for all of them and an evaluation module was added. However, some wires were lost in the transition from revision one to two, as all net-labels in the schematic were redrawn; also the micro-\gls{usb} housing was to small for continuous use and was ripped of by our, way 1to strong, programmers; all of this was hot fixed and eventually the circuit board worked as expected. As with revision one, the schematic of revision two has not been included in this report, as there is little to learn from it; the \gls{pcb} can however be seen as \autoref{fig:pcbr2}.
+The second revision fixed all known problems, followed the space requirements and added a lot of customization. The option to toggle power source and what sensors were currently powered was added. This way the effect from individual modules could be measured. Also since it was still unclear if a combined chip for all \gls{imu}s would be added or not, space for all of them and an evaluation module was added. However, some wires were lost in the transition from revision one to two, as all net-labels in the schematic were redrawn; also the micro-\gls{usb} housing was to small for continuous use and was ripped of by our (way to strong) programmers; all of this was hotfixed and eventually the circuit board worked as expected. As with revision one, the schematic of revision two has not been included in this report, as there is little to learn from it; the \gls{pcb} can however be seen as \autoref{fig:pcbr2}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{Figures/pcb_rev2.jpg}
