--- a/report/hw_design.tex
+++ b/report/hw_design.tex
@@ -132,7 +132,7 @@ The third, and last, revision of the \gls{pcb} can be seen in \autoref{fig:pcbr3
 \input{tmp_hw_choice_of_components_kenny.tex}
 
 \subsection{Results, Discussion and Future Work}\label{sec:hw:tip2}
-\chapterauthor{Brolin, Daniel. Eriksson, Kenny}
+\chapterauthor{Brolin, Daniel \&  Eriksson, Kenny}
 The final sensor board works as expected. Had it not been for the fact that one of the sensors was broken it would have been soldered without any problem. No interference problems or antennas has been found on the last revision \gls{pcb} and no hot fixes were necessary.
 Calibrating the potentiometers for the analog load cell amplifiers is possibly the most uncertain process, as wrongly tuning these will offset all values in the feedback. This is however necessary until the last prototype for the casing is complete, see \autoref{sec:case}, since small differences in the casing will require different calibrations.
 The system is estimated to run for about $24~\textrm{hrs}$, more about power management in \autoref{sec:bat}. 
